Fix phone x-overflow

--- a/style/base/reset.css
+++ b/style/base/reset.css
@@ -21,7 +21,3 @@ html {
     max-width: 100%;
     height: auto;
   }
-
-  .page-wrapper {
-    overflow-x: hidden;
-  }
